--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Street Clean Park</string>
     <string name="title_activity_maps">Map</string>
-    <string name="hours_desc" >I want to park for <b>%d</b> hours</string>
+    <string name="hours_desc" >I want to park for</string>
+    <string name="hours">hours</string>
 </resources>
